# symbolpeek-mcp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MCP_TOOLS.md  README.md  SECURITY.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  conformance.yml  release.yml
config/: claude-mcp.json.example  codex-mcp.toml.example
proptest-regressions/: conformance.txt
scripts/: benchmark-latency.mjs  build-release.sh  install.ps1  install.sh  package-release.sh  run-release.sh  smoke-test.mjs  verify-release-package.sh
skills/symbolpeek/: SKILL.md
skills/symbolpeek/agents/: openai.yaml
src/: cli.rs  errors.rs  filesystem.rs  lib.rs  main.rs  mcp.rs  server.rs  statistics.rs  trace.rs  types.rs
src/language/: json.rs  mod.rs  tree_sitter.rs
src/language/go/: mod.rs
src/language/java/: mod.rs
src/language/markdown/: mod.rs
src/language/python/: mod.rs
src/language/rust/: mod.rs
src/language/typescript/: mod.rs  worker.js  worker_pool.rs
tests/: cli.rs  conformance.rs  edge_cases.rs  filesystem.rs  golden.rs  json_provider.rs  mcp_e2e.rs  mcp_serialization.rs  navigation.rs  project_typescript.rs  registry.rs  rust_provider.rs  tree_sitter_languages.rs  typescript_provider.rs
tests/expected/golden/: edge.json  javascript.json  outline_go.json  outline_java.json  outline_json.json  outline_markdown.json  outline_markdown_setext.json  outline_python.json  outline_rust.json  outline_rust_cfg.json  react.json  typescript.json
tests/fixtures/: sample.tsx
tests/support/: conformance.rs
(+38 files in other folders)
