[package]
name = "codescope"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "An MCP server for retrieving minimal TypeScript and JavaScript source context"
license = "MIT"

[[bin]]
name = "codescope"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
rmcp = { version = "2.2", features = ["server", "macros", "transport-io"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "io-std"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
