[package]
name = "symbolpeek"
version = "0.4.1"
edition = "2021"
rust-version = "1.82"
description = "An MCP server for retrieving minimal multi-language source context"
license = "MIT"

[[bin]]
name = "symbolpeek"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
rmcp = { version = "2.2", features = ["server", "macros", "transport-io"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "io-std", "time"] }
tree-sitter = "0.25.10"
tree-sitter-go = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-java = "0.23.5"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"

[dev-dependencies]
proptest = { version = "=1.9.0", default-features = false, features = ["std"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
